[project] drops "no verification" VM option (IDEA-219542)
... to make all distributions/run configurations equal and possibly prevent strange unpredictable erroneous behaviour at runtime

GitOrigin-RevId: b92abe3b375b0a7d4eef2ae901d79096e9ab1fa7